fix: text alignment on credits for chrome

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,11 +104,12 @@ a {
   background: url("./resources/add.svg");
   background-repeat: no-repeat;
   background-position: 9px 4px;
-  display: inline-block;
   padding: 0.5rem;
   color: #000;
   width: 160px;
+  margin: 0 auto;
   margin-top: 3rem;
+  display: block;
 }
 
 .credits__btn {
@@ -292,13 +293,13 @@ li.library__book-detail-item:nth-child(3) {
   padding: 0;
   margin-top: 0.58rem;
   background: url(./resources/github.svg) no-repeat center;
-  margin-left: 0.6rem;
+  margin-right: 0.2rem;
 }
 
 .view-code-btn__label {
   font-size: 1em;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-left: 0.66rem;
+  margin-right: 0.74rem;
   margin-top: 1.4rem;
 }
 .no-style-anchor {
